--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "date-fns": "^2.28.0",
     "mdi-react": "^8.3.1",
     "prop-types": "^15.8.1",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
